k8s/auth/oauth2-proxy/resources/external-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
    external-dns.alpha.kubernetes.io/target: external.durbin.casa
spec:
  ingressClassName: external
  rules:
    - host: &host oauth2-proxy.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: web-service
                port:
                  name: http
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
